--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 		<div class="seccion-productos">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-4 col-md-offset-4">
+					<div class="col-md-12">
 						<h2>Nuestros Productos</h2>
 					</div>
 				</div>
