--- a/404.html
+++ b/404.html
@@ -1,157 +1,195 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Page Not Found :(</title>
-        <style>
-            ::-moz-selection {
-                background: #b3d4fc;
-                text-shadow: none;
-            }
+		<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+		<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+		<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+		<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+		<head>
+				<meta charset="utf-8">
+				<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+				<title>Lo Jack | Recupera tu tranquilidad</title>
+				<meta name="description" content="">
+				<meta name="viewport" content="width=device-width">
 
-            ::selection {
-                background: #b3d4fc;
-                text-shadow: none;
-            }
+				<link rel="stylesheet" href="library/css/libs/bootstrap.css">
+				<style>
+						body {
+								
+								padding-bottom: 20px;
+						}
+				</style>
+				<link href='http://fonts.googleapis.com/css?family=Roboto:400,400italic,700,500' rel='stylesheet' type='text/css'>
+				<link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,700' rel='stylesheet' type='text/css'>
+				<link rel="stylesheet" href="library/fonts/font-awesome/css/font-awesome.min.css">
+				<link rel="stylesheet" href="library/css/style.css">
+				<script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
 
-            html {
-                padding: 30px 10px;
-                font-size: 20px;
-                line-height: 1.4;
-                color: #737373;
-                background: #f0f0f0;
-                -webkit-text-size-adjust: 100%;
-                -ms-text-size-adjust: 100%;
-            }
+				<script src="library/js/libs/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 
-            html,
-            input {
-                font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-            }
 
-            body {
-                max-width: 500px;
-                _width: 500px;
-                padding: 30px 20px 50px;
-                border: 1px solid #b3b3b3;
-                border-radius: 4px;
-                margin: 0 auto;
-                box-shadow: 0 1px 10px #a7a7a7, inset 0 1px 0 #fff;
-                background: #fcfcfc;
-            }
+		</head>
+		<body>
+				<!--[if lt IE 7]>
+						<p class="chromeframe">
+							Estas usando un navegador muy <strong>viejo</strong>. Por favor <a href="http://browsehappy.com/"> actualiza </a> tu navegador o activa el  <a href="http://www.google.com/chromeframe/?redirect=true">Frame de Google Chrome</a>
+				<![endif]-->
 
-            h1 {
-                margin: 0 10px;
-                font-size: 50px;
-                text-align: center;
-            }
+				<header>
+					<div class="secondary-menu">
+						<div class="container">
+							<div class="row">
+								<div class="col-md-11 col-sm-10">
+									<nav>
+										<ul class="menu-sec list-inline">
+											<li><a href="#">Los hechos hablan</a></li>
+											<li><a href="#">¿Qué hacer en caso de robo?</a></li>
+											<li><a href="#">Preguntas Frecuentes</a></li>
+											<li><a href="#">Programas LoJack</a></li>
+											<li><a href="#">LoJack en tu empresa</a></li>
+										</ul>
+									</nav>
+								</div>
+								<div class="col-md-1 col-sm-2">
+									<span class="social-header">
+										<a href="#" class="top-social"><i class="fa fa-facebook"></i></a>
+										<a href="#" class="top-social"><i class="fa fa-twitter"></i></a>
+									</span>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="primary-menu">
+						<div class="container">
+							<div class="row">
+								<div class="col-md-2 col-sm-2">
+									<div class="navbar-logo">
+										<h1><a href="#" title=""><img src="library/images/logo-blanco.png"></a></h1>
+									</div>
+								</div>
+								<div class="col-md-8 col-sm-8">
+									<nav>
+										<ul class="menu-prim">
+											<li><a href="#">Home</a></li>
+											<li><a href="#">LoJack</a></li>
+											<li><a href="#">Beneficios</a></li>
+											<li><a href="#">Productos</a></li>
+											<li><a href="#">Instalación y venta</a></li>
+											<li><a href="#">Noticias</a></li>
+											<li><a href="#">Contacto</a></li>
+										</ul>
+									</nav>
+								</div><!--/.navbar-collapse -->
+								<div class="col-md-2 col-sm-2">
 
-            h1 span {
-                color: #bbb;
-            }
 
-            h3 {
-                margin: 1.5em 0 0.5em;
-            }
+									<form class="searchbox">
+										<input type="text" placeholder="Buscar" name="search" class="searchbox-input" required>
+										<input type="submit" class="searchbox-submit" >
+									</form>
+								</div>
+							</div>
+						</div>
+					</div>
+				</header>
 
-            p {
-                margin: 1em 0;
-            }
+<section>
+	<div class="container-fluid">
+		<div class="not-found">
+			<img src="library/images/404-bg.jpg">
+		</div>
+	</div>
+</section>
 
-            ul {
-                padding: 0 0 0 40px;
-                margin: 1em 0;
-            }
 
-            .container {
-                max-width: 380px;
-                _width: 380px;
-                margin: 0 auto;
-            }
 
-            /* google search */
+			<footer>
+				<div class="footer-principal">
+					<div class="container">
+						<div class="row">
+							<div class="col-md-3 col-sm-6">
+								<article class="footer-section">
+									<h3>Newsletter</h3>
+									<p>Recibe noticias acerca de LoJack en tu cuenta de Correo. <br>Suscríbete a nuestro Newsletter:</p>
+									<form>
+										<input type="text" placeholder="Escriba su e-mail" name="news-suscribe" class="searchbox-input" required><br>
+										<input type="submit" class="btn btn-default" value="Suscribir" style="margin-top:5px;"><br>
+									</form>
+									<h3>Síguenos</h3>
+									<img src="library/images/fb-likebtn.png" style="margin-right:10px;">
+									<img src="library/images/tw-followbtn.png" style="margin-right:10px;">
+									<img src="library/images/google-plusbtn.png" style="margin-right:10px;">
+								</article>
+							</div>
+							<div class="col-md-3 col-sm-6">
+								<article class="footer-section">
+									<h3>Contacto</h3>
+									<p><strong>México</strong><br> Alejandro Dumas No. 304 Col Polanco, México D.F. Tel (55) 2581 1060</p>
+									<p><strong>Guadalajara</strong> <br>Av. Patria No. 39 Col. Prados de Vallarta Zapopan, Jalisco Tels: (33) 36 30 40 04 y 06</p>
+									<p><strong>Monterrey</strong> <br>Roble No. 300 Col. Valle Campestre San Pedro Garza García, Nuevo León Tel (81) 8335 1480 y 81</p>
+									<p><strong>Resto del País</strong><br>01 800 849 9053</p>
+								</article>
+							</div>
+							<div class="col-md-3 col-sm-6">
+								<article class="footer-section">
+									<h3>Sobre Nosotros</h3>
+									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum tempora repellendus mollitia ad iusto perferendis. Exercitationem, doloribus velit unde eligendi!
+								</article>
+							</div>
+							<div class="col-md-3 col-sm-6">
+								<article class="footer-section">
+									<h3>Recuperaciones</h3>
+									<p><img src="library/images/sello-recuperaciones.png"></p>
+								</article>
+							</div>
+						</div>
+					</div>
 
-            #goog-fixurl ul {
-                list-style: none;
-                padding: 0;
-                margin: 0;
-            }
+				</div>
 
-            #goog-fixurl form {
-                margin: 0;
-            }
+				<div class="footer-secundario">
+					<div class="container">
+						<div class="row">
+							<div class="col-md-12">
+								<nav>
+									<ul class="menu-sec list-inline">
+										<li><a href="#">Inicio</a></li>
+										<li><a href="#">Acerca de LoJack</a></li>
+										<li><a href="#">Contacto</a></li>
+										<li><a href="#">Mapa de sitio</a></li>
+										<li><a href="#">Aviso de privacidad</a></li>
+									</ul>
+								</nav>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-3 col-md-offset-9" style="color:#9c9c9c; font-size: 12px; text-align:right;">
+								<p>Desarrollado por <a href="#">Clicker 360</a></p>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-6">
+								<p>&copy; 2014, Car Mart Comunicaciones, S.A. de C.V. Todos los derechos reservados</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</footer>
 
-            #goog-wm-qt,
-            #goog-wm-sb {
-                border: 1px solid #bbb;
-                font-size: 16px;
-                line-height: normal;
-                vertical-align: top;
-                color: #444;
-                border-radius: 2px;
-            }
 
-            #goog-wm-qt {
-                width: 220px;
-                height: 20px;
-                padding: 5px;
-                margin: 5px 10px 0 0;
-                box-shadow: inset 0 1px 1px #ccc;
-            }
 
-            #goog-wm-sb {
-                display: inline-block;
-                height: 32px;
-                padding: 0 10px;
-                margin: 5px 0 0;
-                white-space: nowrap;
-                cursor: pointer;
-                background-color: #f5f5f5;
-                background-image: -webkit-linear-gradient(rgba(255,255,255,0), #f1f1f1);
-                background-image: -moz-linear-gradient(rgba(255,255,255,0), #f1f1f1);
-                background-image: -ms-linear-gradient(rgba(255,255,255,0), #f1f1f1);
-                background-image: -o-linear-gradient(rgba(255,255,255,0), #f1f1f1);
-                -webkit-appearance: none;
-                -moz-appearance: none;
-                appearance: none;
-                *overflow: visible;
-                *display: inline;
-                *zoom: 1;
-            }
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+				<script>window.jQuery || document.write('<script src="library/js/libs/jquery-1.10.1.min.js"><\/script>')</script>
 
-            #goog-wm-sb:hover,
-            #goog-wm-sb:focus {
-                border-color: #aaa;
-                box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
-                background-color: #f8f8f8;
-            }
+				<script src="library/js/libs/bootstrap.min.js"></script>
 
-            #goog-wm-qt:hover,
-            #goog-wm-qt:focus {
-                border-color: #105cb6;
-                outline: 0;
-                color: #222;
-            }
+				<script src="library/js/plugins.js"></script>
+				<script src="library/js/main.js"></script>
 
-            input::-moz-focus-inner {
-                padding: 0;
-                border: 0;
-            }
-        </style>
-    </head>
-    <body>
-        <div class="container">
-            <h1>Not found <span>:(</span></h1>
-            <p>Sorry, but the page you were trying to view does not exist.</p>
-            <p>It looks like this was the result of either:</p>
-            <ul>
-                <li>a mistyped address</li>
-                <li>an out-of-date link</li>
-            </ul>
-            <script>
-                var GOOG_FIXURL_LANG = (navigator.language || '').slice(0,2),GOOG_FIXURL_SITE = location.host;
-            </script>
-            <script src="//linkhelp.clients.google.com/tbproxy/lh/wm/fixurl.js"></script>
-        </div>
-    </body>
+
+				<script>
+						var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
+						(function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
+						g.src='//www.google-analytics.com/ga.js';
+						s.parentNode.insertBefore(g,s)}(document,'script'));
+				</script>
+		</body>
 </html>
