modificaciones a _base.less
_base.less

--- a/productos.html
+++ b/productos.html
@@ -138,7 +138,7 @@
 										</div>
 										<div class="row">
 											<div class="col-md-5">
-												<div class="imagen-producto"><img src="library/images/auto.png" alt=""></div>
+												<div class="imagen-producto"><img src="library/images/auto.png" alt="" style="margin-left:-40px;"></div>
 											</div>
 											<div class="col-md-3">
 												<p style="color:#fff; font-size:22px; text-align:center; font-weight:300;">
@@ -191,7 +191,7 @@
 										</div>
 										<div class="row">
 											<div class="col-md-5">
-												<div class="imagen-producto"><img src="library/images/auto.png" alt=""></div>
+												<div class="imagen-producto" ><img src="library/images/auto.png" alt="" style="margin-left: -40px"></div>
 											</div>
 											<div class="col-md-3">
 												<p style="color:#fff; font-size:22px; text-align:center; font-weight:300;">
